--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/core": "^7.0.0-beta.42",
     "@babel/preset-env": "^7.0.0-beta.42",
     "babel-loader": "^8.0.0-beta.2",
+    "chokidar": "^2.0.3",
     "evoozer": "github:idleman/evoozer",
     "left-pad": "^1.2.0",
     "webpack": "^4.2.0"
