package.json - Changed name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dental-care-plattform",
+  "name": "evoozer-cli",
   "version": "1.0.0",
   "description": "",
   "main": "./evoozer-cli.mjs",
